# pr03-daa-divide-y-venceras

./: .gitignore  CMakeLists.txt  README.md
src/: algoritmo.h  cliente-divide-y-venceras.cc  cliente-empleados.cc  divideyvenceras.cc  divideyvenceras.h  instancia-vector.cc  instancia-vector.h  instancia.h  main.cc  mergesort.cc  mergesort.h  quicksort.cc  quicksort.h  solucion-vector.cc  solucion-vector.h  solucion.h  utilidades.cc  utilidades.h
src/algoritmo/: algoritmo.h  divideyvenceras.cc  divideyvenceras.h  mergesort.cc  mergesort.h  quicksort.cc  quicksort.h
src/algoritmo/combine/: combine-casa.cc  combine-casa.h  combine-modi.cc  combine-modi.h  combine.h
src/algoritmo/small-solver/: small-solver.h  solver-gready.cc  solver-gready.h  solver-greedy-mejorado.cc  solver-greedy-mejorado.h  solver-pd.cc  solver-pd.h
src/config/: configuracion-algoritmo.cc  configuracion-algoritmo.h
src/empleados/: planificacion-empleados.cc  planificacion-empleados.h
src/fabrica/: fabrica-algoritmo.cc  fabrica-algoritmo.h
src/instancias/: instancia-empleados.cc  instancia-empleados.h  instancia-vector.h  instancia.h
src/isntancias/: instancia-vector.cc  instancia-vector.h  instancia.h
src/lector/: lector-configuracion-json.cc  lector-configuracion-json.h  lector-configuracion.h  lector-instancia.h  lector-json.cc  lector-json.h
src/solucion/: solucion-empleados.cc  solucion-empleados.h  solucion-vector.cc  solucion-vector.h  solucion.h
test/: instance_test_3emp_4dias.json  test1.json  test_instancia.cc  test_mergesort.cc  test_quicksort.cc  test_solucion.cc
test-algoritmos/: divide_and_greedy_modi.json  divide_and_improved_greedy.json
